--- a/iOS/UICollectionView/Book_UICollectionView/Base.lproj/Main.storyboard
+++ b/iOS/UICollectionView/Book_UICollectionView/Base.lproj/Main.storyboard
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="IY3-HR-fjS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="nnI-sC-gDv">
     <device id="ipad10_2" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Cover Flow Layout View Controller-->
+        <!--Multiple Layout Collection View Controller-->
         <scene sceneID="hpL-Qy-kdO">
             <objects>
-                <collectionViewController id="Xxm-KL-1eX" customClass="CoverFlowLayoutViewController" customModule="Book_UICollectionView" customModuleProvider="target" sceneMemberID="viewController">
+                <collectionViewController id="Xxm-KL-1eX" customClass="MultipleLayoutCollectionViewController" customModule="Book_UICollectionView" customModuleProvider="target" sceneMemberID="viewController">
                     <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="UuW-Zb-Q3Z">
                         <rect key="frame" x="0.0" y="0.0" width="810" height="1080"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -37,7 +37,7 @@
                     <navigationItem key="navigationItem" id="gss-58-tgI">
                         <nil key="title"/>
                         <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="65r-sc-iXK">
-                            <rect key="frame" x="285" y="9" width="240" height="33"/>
+                            <rect key="frame" x="255.5" y="8.5" width="299" height="33"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <segments>
                                 <segment title="Boring"/>
@@ -53,25 +53,59 @@
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fmu-VN-cx2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="754" y="-443"/>
+            <point key="canvasLocation" x="1412" y="-988"/>
+        </scene>
+        <!--Select And Menu Collection View Controller-->
+        <scene sceneID="j0L-eo-oHX">
+            <objects>
+                <collectionViewController id="jEe-66-uac" customClass="SelectAndMenuCollectionViewController" customModule="Book_UICollectionView" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="6ds-Ub-KZ8">
+                        <rect key="frame" x="0.0" y="0.0" width="810" height="1080"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="fFI-zJ-DSF">
+                            <size key="itemSize" width="128" height="128"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells/>
+                        <connections>
+                            <outlet property="dataSource" destination="jEe-66-uac" id="0vF-pj-sWS"/>
+                            <outlet property="delegate" destination="jEe-66-uac" id="gof-rb-MVS"/>
+                        </connections>
+                    </collectionView>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="C9q-f6-vOq">
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="play" id="nl2-q5-739">
+                            <connections>
+                                <segue destination="Xxm-KL-1eX" kind="show" id="o3U-wL-3vH"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Hdp-50-i6M" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="703.7037037037037" y="-955"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="Bsm-Cs-M6U">
+        <scene sceneID="69d-cb-qnA">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IY3-HR-fjS" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nnI-sC-gDv" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="vv3-AR-oFU">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4kt-zC-Eas">
                         <rect key="frame" x="0.0" y="0.0" width="810" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="Xxm-KL-1eX" kind="relationship" relationship="rootViewController" id="ZNn-aL-sdv"/>
+                        <segue destination="jEe-66-uac" kind="relationship" relationship="rootViewController" id="j3N-8a-mzV"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="FOr-I1-Kol" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cJO-Iw-xfI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-58" y="-443"/>
+            <point key="canvasLocation" x="-53.333333333333329" y="-955"/>
         </scene>
     </scenes>
 </document>
